2006-03-20  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.in:
	* buzz/BuzzMachineLoader.h:
	* src/BuzzMachineLoader.dll:
	* src/bmltest_info.c: (test_info):
	  more infos, added dll-name property

2005-09-26 23:46  Stefan Kost <ensonic@users.sf.net>

	* .cvsignore, src/BuzzMachineLoader.dll:
	new dll wrapper (fixes auxbus machines)

2005-09-12 20:26  Stefan Kost <ensonic@users.sf.net>

	* README, dllwrapper1/wine/win32.c, src/BuzzMachineLoader.dll:
	calling other dlls works more info in the README

2005-09-12 18:34  Stefan Kost <ensonic@users.sf.net>

	* dllwrapper1/wine/pe_image.c, dllwrapper1/wine/win32.c, src/bml.c:
	experiments with dsplib

2005-09-09 14:02  Stefan Kost <ensonic@users.sf.net>

	* .cvsignore, testmachine.sh, buzz/.cvsignore:
	little cleanup and some notes

2005-09-06 00:40  Stefan Kost <ensonic@users.sf.net>

	* .cvsignore, src/.cvsignore:
	more cvs maintainance

2005-09-06 00:38  Stefan Kost <ensonic@users.sf.net>

	* .cvsignore, dllwrapper1/.cvsignore, dllwrapper1/wine/.cvsignore,
	src/.cvsignore:
	cvs maintainance

2005-09-06 00:31  Stefan Kost <ensonic@users.sf.net>

	* testmachine.sh, dllwrapper1/wine/module.c,
	dllwrapper1/wine/win32.c, src/BuzzMachineLoader.dll,
	src/bmltest_info.c:
	updated test-machine script new version of
	wrapper dll

2005-06-30 17:51  Stefan Kost <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	def values are now correctly initialized

2005-06-23 23:16  Stefan Kost <ensonic@users.sf.net>

	* NEWS:
	little distcheck fix (still problems)

2005-06-18 09:32  Stefan Kost <ensonic@users.sf.net>

	* src/: BuzzMachineLoader.dll, bml.c, bml.h, bmltest_info.c:
	added another wrapper method bmltest_info used
	describe_value methods

2005-06-17 17:30  Stefan Kost <ensonic@users.sf.net>

	* src/: bml.h, bmltest_info.c:
	use describe value in test tool

2005-06-17 12:05  Stefan Kost <ensonic@users.sf.net>

	* dllwrapper1/wine/driver.c, dllwrapper1/wine/pe_image.c,
	src/BuzzMachineLoader.dll, src/bml.c, src/bml.h,