@@ -57,16 +57,16 @@ typedef DWORD CALLBACK (*DLLENTRYPROC)(HMODULE,DWORD,LPVOID);
 typedef struct {
 	WORD	popl	WINE_PACKED;	/* 0x8f 0x05 */
 	DWORD	addr_popped WINE_PACKED;/* ...  */
-	BYTE	pushl1	WINE_PACKED;	/* 0x68 */
+	BYTE	pushl1;			/* 0x68 */
 	DWORD	newret WINE_PACKED;	/* ...  */
-	BYTE	pushl2 	WINE_PACKED;	/* 0x68 */
+	BYTE	pushl2;			/* 0x68 */
 	DWORD	origfun WINE_PACKED;	/* original function */
-	BYTE	ret1	WINE_PACKED;	/* 0xc3 */
+	BYTE	ret1;			/* 0xc3 */
 	WORD	addesp 	WINE_PACKED;	/* 0x83 0xc4 */
-	BYTE	nrofargs WINE_PACKED;	/* nr of arguments to add esp, */
-	BYTE	pushl3	WINE_PACKED;	/* 0x68 */
+	BYTE	nrofargs;		/* nr of arguments to add esp, */
+	BYTE	pushl3;			/* 0x68 */
 	DWORD	oldret	WINE_PACKED;	/* Filled out from popl above  */
-	BYTE	ret2	WINE_PACKED;	/* 0xc3 */
+	BYTE	ret2;			/* 0xc3 */
 } ELF_STDCALL_STUB;
 
 typedef struct {
